# euroleague-analytics

./: .env.example  .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  refresh.yml
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
components/: .gitkeep
docs/: ARCHITECTURE.md  DECISIONS.md
lib/: duckdb.ts
pipeline/: pyproject.toml  requirements-dev.txt  requirements.txt
pipeline/scripts/: bootstrap_demo_db.py  build_dimensions.py  build_facts_simple.py  fetch_games.py  fetch_schedule.py  fetch_season_aggregates.py  validate_facts_simple.py
pipeline/src/pipeline/: __init__.py  config.py  logging.py  run.py
pipeline/src/pipeline/fetchers/: __init__.py  base.py  game.py  schedule.py  season_stats.py  standings.py
pipeline/src/pipeline/storage/: __init__.py  parquet_io.py  paths.py
pipeline/src/pipeline/transformers/: __init__.py  base.py  dimensions.py  facts_simple.py  paths.py
pipeline/tests/: test_smoke.py
public/data/: .gitkeep  euroleague.duckdb
storage/: .gitkeep
